log file ahora
Android Bundling failed 15783ms node_modules\expo-router\entry.js (1199 modules)
 ERROR  SyntaxError: C:\Users\micro\appStream2\app\player.tsx: Unexpected token (612:17)

  610 |     lineHeight: 24,
  611 |   },
> 612 | });    cover_big?: string;
      |                  ^
  613 |     stream_icon?: string;
  614 |     container_extension?: string;
  615 |     direct_source?: string;
    at toParseError (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parse-error.ts:95:45)
    at TypeScriptParserMixin.raise (C:\Users\micro\appStream2\node_modules\@babel\parser\src\tokenizer\index.ts:1504:19)        
    at TypeScriptParserMixin.unexpected (C:\Users\micro\appStream2\node_modules\@babel\parser\src\tokenizer\index.ts:1544:16)   
    at TypeScriptParserMixin.parseExprAtom (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:1358:22)
    at TypeScriptParserMixin.parseExprAtom (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\jsx\index.ts:583:22)
    at TypeScriptParserMixin.parseExprSubscripts (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:742:23)
    at TypeScriptParserMixin.parseUpdate (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:721:21) 
    at TypeScriptParserMixin.parseMaybeUnary (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:683:23)
    at TypeScriptParserMixin.parseMaybeUnary (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\typescript\index.ts:3893:20)
    at TypeScriptParserMixin.parseMaybeUnaryOrPrivate (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:417:14)
    at TypeScriptParserMixin.parseExprOps (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:429:23)    at TypeScriptParserMixin.parseMaybeConditional (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:384:23)
    at TypeScriptParserMixin.parseMaybeAssign (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:301:21)
    at TypeScriptParserMixin.parseMaybeAssign (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\typescript\index.ts:3764:22)
    at callback (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:257:12)
    at TypeScriptParserMixin.allowInAnd (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:3197:12) 
    at TypeScriptParserMixin.parseMaybeAssignAllowIn (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:256:17)
    at TypeScriptParserMixin.parseConditional (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:403:30)
    at TypeScriptParserMixin.parseConditional (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\typescript\index.ts:3393:20)
    at TypeScriptParserMixin.parseMaybeConditional (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:390:17)
    at TypeScriptParserMixin.parseMaybeAssign (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:301:21)
    at TypeScriptParserMixin.parseMaybeAssign (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\typescript\index.ts:3764:22)
    at TypeScriptParserMixin.parseExpressionBase (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:226:23)
    at callback (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:217:39)
    at TypeScriptParserMixin.allowInAnd (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:3192:16) 
    at TypeScriptParserMixin.parseExpression (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\expression.ts:217:17)
    at TypeScriptParserMixin.parseStatementContent (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:688:23)
    at TypeScriptParserMixin.parseStatementContent (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\typescript\index.ts:3220:20)
    at TypeScriptParserMixin.parseStatementLike (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:482:17)
    at TypeScriptParserMixin.parseModuleItem (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:419:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1443:16)
    at TypeScriptParserMixin.parseBlockBody (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1417:10)
    at TypeScriptParserMixin.parseProgram (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:229:10) 
    at TypeScriptParserMixin.parseTopLevel (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:203:25)    at TypeScriptParserMixin.parse (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\index.ts:83:25)
    at TypeScriptParserMixin.parse (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\typescript\index.ts:4354:20)
    at parse (C:\Users\micro\appStream2\node_modules\@babel\parser\src\index.ts:54:26)
    at parser (C:\Users\micro\appStream2\node_modules\@babel\core\src\parser\index.ts:29:19)
    at parser.next (<anonymous>)
    at normalizeFile (C:\Users\micro\appStream2\node_modules\@babel\core\src\transformation\normalize-file.ts:50:24)
    at normalizeFile.next (<anonymous>)
    at run (C:\Users\micro\appStream2\node_modules\@babel\core\src\transformation\index.ts:41:36)
    at run.next (<anonymous>)
    at transform (C:\Users\micro\appStream2\node_modules\@babel\core\src\transform.ts:29:20)
    at transform.next (<anonymous>)
    at evaluateSync (C:\Users\micro\appStream2\node_modules\gensync\index.js:251:28)
    at fn (C:\Users\micro\appStream2\node_modules\gensync\index.js:89:14)
    at stopHiding - secret - don't use this - v1 (C:\Users\micro\appStream2\node_modules\@babel\core\src\errors\rewrite-stack-trace.ts:99:14)
    at Object.transformSync (C:\Users\micro\appStream2\node_modules\@babel\core\src\transform.ts:66:52)
    at parseWithBabel (C:\Users\micro\appStream2\node_modules\@expo\metro-config\src\transformSync.ts:54:16)
